# plugin-store-community

./: CONTRIBUTING.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE_ZH.md  README.md
.claude-plugin/: marketplace.json
.github/prompts/: ai-review-system.md
.github/workflows/: plugin-ai-review.yml  plugin-build.yml  plugin-lint.yml  plugin-publish.yml
docs/: PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE_ZH.md
skills/e2e-go-cli/: SKILL.md
skills/e2e-node-cli/: SKILL.md
skills/e2e-python-cli/: SKILL.md
skills/e2e-skill-only/: SKILL.md
skills/e2e-stub-external/: SKILL.md
skills/ranking-sniper/: SKILL.md
skills/scan-live/: SKILL.md
skills/smart-signal/: SKILL.md
submissions/_example-plugin/: plugin.yaml
submissions/archimedes/: plugin.yaml
submissions/buildx-hackathon/: README.md  plugin.yaml
submissions/cian-yield-layer/: plugin.yaml
submissions/e2e-go-cli/: README.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
submissions/e2e-node-cli/: README.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
submissions/e2e-python-cli/: LICENSE  README.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
submissions/e2e-rust-cli/: README.md
submissions/e2e-skill-only/: README.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
submissions/e2e-stub-external/: README.md  SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
submissions/e2e-ts-cli/: SKILL_SUMMARY.md  SUMMARY.md  plugin.yaml
submissions/fenix-finance/: Cargo.toml  plugin.yaml
submissions/gravita-protocol/: Cargo.toml  plugin.yaml
submissions/gravita-protocol/skills/gravita-protocol/: SKILL.md
submissions/gravita-protocol/src/: config.rs  main.rs  onchainos.rs  rpc.rs
submissions/gravita-protocol/src/commands/: adjust.rs  close.rs  mod.rs  open.rs  position.rs
submissions/gtbtc/: Cargo.toml  plugin.yaml
submissions/gtbtc/skills/gtbtc/: SKILL.md
submissions/gtbtc/src/: api.rs  config.rs  main.rs  onchainos.rs  rpc.rs
submissions/gtbtc/src/commands/: approve.rs  apr.rs  balance.rs  mod.rs  price.rs  transfer.rs
submissions/hyperlend-pooled/: Cargo.toml  LICENSE  plugin.yaml
submissions/hyperlend-pooled/skills/hyperlend-pooled/: SKILL.md
submissions/hyperlend-pooled/src/: config.rs  main.rs  onchainos.rs  rpc.rs
submissions/hyperlend-pooled/src/commands/: borrow.rs  get_markets.rs  mod.rs  positions.rs  repay.rs  supply.rs  withdraw.rs
submissions/jito/: Cargo.toml  plugin.yaml
submissions/jito/skills/jito/: SKILL.md
submissions/jito/src/: api.rs  main.rs  onchainos.rs
submissions/jito/src/commands/: info.rs  mod.rs  positions.rs  restake_deposit.rs  restake_vaults.rs  restake_withdraw.rs  stake.rs  unstake.rs
submissions/kamino-lend/: Cargo.toml  README.md  plugin.yaml
submissions/kamino-lend/skills/kamino-lend/: SKILL.md
submissions/kamino-lend/src/: api.rs  config.rs  main.rs  onchainos.rs
submissions/kamino-lend/src/commands/: borrow.rs  deposit.rs  markets.rs  mod.rs  obligations.rs  repay.rs  reserves.rs  withdraw.rs
submissions/kerneldao-restaking/: Cargo.toml  plugin.yaml
submissions/lista-cdp/: Cargo.toml  plugin.yaml
submissions/lista-cdp/skills/lista-cdp/: SKILL.md
submissions/lista-cdp/src/: config.rs  main.rs  onchainos.rs  rpc.rs
submissions/lista-cdp/src/commands/: borrow.rs  cdp_deposit.rs  cdp_withdraw.rs  mod.rs  positions.rs  repay.rs  stake.rs  unstake.rs
submissions/meme-trench-scanner/: README.md
submissions/node-echo-cli/: README.md
submissions/node-fs-tool/: README.md  plugin.yaml
submissions/okx-buildx-hackathon-agent-track/: README.md  SKILL_SUMMARY.md  plugin.yaml
submissions/polymarket-agent-skills/: README.md  plugin.yaml
submissions/python-echo-cli/: plugin.yaml
submissions/ranking-sniper/: README.md  plugin.yaml
submissions/reservoir-protocol/: Cargo.toml  plugin.yaml
submissions/reservoir-protocol/skills/reservoir-protocol/: SKILL.md
submissions/reservoir-protocol/src/: config.rs  main.rs  onchainos.rs  rpc.rs
submissions/reservoir-protocol/src/commands/: info.rs  mint.rs  mod.rs  redeem.rs  save.rs
submissions/scan-live/: README.md  plugin.yaml
submissions/signal-tracker-python/: signal-tracker.spec
submissions/signal-tracker-rust/: Cargo.toml  README.md  (+1 more)
submissions/treehouse-protocol/: Cargo.toml  plugin.yaml
submissions/treehouse-protocol/skills/treehouse-protocol/: SKILL.md
submissions/treehouse-protocol/src/: config.rs  main.rs  onchainos.rs  rpc.rs
submissions/treehouse-protocol/src/commands/: balance.rs  deposit.rs  mod.rs  positions.rs  price.rs  withdraw.rs
(+139 files in other folders)
