[package]
name = "gtbtc"
version = "0.1.0"
edition = "2021"
description = "Gate Wrapped BTC (GTBTC) ERC-20/SPL token — balance, price, APR, transfer, approve"

[[bin]]
name = "gtbtc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
hex = "0.4"
