[package]
name = "hyperlend-pooled"
version = "0.1.0"
edition = "2021"
description = "HyperLend Core Pools (Aave V3 fork) on HyperEVM — supply, borrow, repay, withdraw"

[[bin]]
name = "hyperlend-pooled"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
