[package]
name = "jito"
version = "0.1.0"
edition = "2021"
description = "Jito JitoSOL liquid staking and restaking on Solana"

[[bin]]
name = "jito"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
