[package]
name = "kamino-lend"
version = "0.1.0"
edition = "2021"
description = "Kamino Lend CLI for supplying, borrowing, and repaying on Solana"

[[bin]]
name = "kamino-lend"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
