[package]
name = "lista-cdp"
version = "0.1.0"
edition = "2021"
description = "Lista DAO CDP — stake BNB for slisBNB, deposit collateral, borrow lisUSD on BSC"

[[bin]]
name = "lista-cdp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
