[package]
name = "reservoir-protocol"
version = "0.1.0"
edition = "2021"
description = "Mint rUSD stablecoin from USDC and earn yield via srUSD on Reservoir Protocol"

[[bin]]
name = "reservoir-protocol"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
